[package]
name = "golden_apple"
version = "0.17.0"
authors = ["thisjaiden"]
edition = "2018"
keywords = ["api", "parse", "minecraft"]
categories = ["data-structures", "encoding"]
description = "A Rust library for decoding and sharing Minecraft data types"
repository = "https://github.com/thisjaiden/golden_apple"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
reqwest = { version = "0.11.11", features = ["blocking"] }
num-traits = "0.2.15"
num-derive = "0.3.3"

[build-dependencies]
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
