[package]
name = "golden_apple"
version = "0.18.0"
authors = ["thisjaiden"]
edition = "2021"
keywords = ["api", "parse", "minecraft"]
categories = ["data-structures", "encoding"]
description = "A Rust library for decoding and sharing Minecraft data types"
repository = "https://github.com/thisjaiden/golden_apple"
readme = "README.md"
license = "MIT"

[dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
reqwest = { version = "0.12.5", features = ["blocking"] }
num-traits = "0.2.19"
num-derive = "0.4.2"

[build-dependencies]
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.121"
