[package]
name = "golden_apple"
version = "0.20.0"
authors = ["thisjaiden"]
edition = "2021"
keywords = ["api", "parse", "minecraft"]
categories = ["data-structures", "encoding"]
description = "A Rust library for decoding and sharing Minecraft data types"
repository = "https://github.com/thisjaiden/golden_apple"
readme = "README.md"
license = "MIT"

[features]
# TODO: https://doc.rust-lang.org/cargo/reference/features.html#optional-dependencies
encryption = []

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
reqwest = { version = "0.12.9", features = ["blocking"] }
num-traits = "0.2.19"
num-derive = "0.4.2"
cesu8 = "1.1.0"
flate2 = "1.0.34"
bitflags = "2.6.0"

[build-dependencies]
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
